[package]
name = "clamendar"
version = "0.1.0"
authors = ["Ty Kozic <tykozic@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
